--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+sratom (9999) unstable;
+
+  * Correctly read objects with several rdf:type properties
+
+ -- David Robillard <d@drobilla.net>
+
 sratom (0.2.0) stable;
 
   * Initial release
