Support writing Object Atoms as top level descriptions if subject and predicate are not given.
git-svn-id: http://svn.drobilla.net/lad/trunk/sratom@4333 a436a847-0d15-0410-975c-d299462d15a1

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 sratom (9999) unstable;
 
   * Correctly read objects with several rdf:type properties
+  * Support writing Object Atoms as top level descriptions if subject and
+    predicate are not given.
 
  -- David Robillard <d@drobilla.net>
 
