--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
 sratom (0.4.1) unstable;
 
+  * Fix memory leaks
   * Disable timestamps in HTML documentation for reproducible build
 
- -- David Robillard <d@drobilla.net>  Sun, 09 Sep 2012 03:19:01 -0400
+ -- David Robillard <d@drobilla.net>  Thu, 22 Nov 2012 22:45:27 -0500
 
 sratom (0.4.0) stable;
 
@@ -19,4 +20,3 @@ sratom (0.2.0) stable;
   * Initial release
 
  -- David Robillard <d@drobilla.net>  Wed, 18 Apr 2012 15:14:11 -0400
-
