--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
-sratom (0.4.3) unstable;
+sratom (0.4.4) stable;
 
   * Escape invalid characters when writing paths as URIs
   * Fancier printing without subject and predicate
 
- -- David Robillard <d@drobilla.net>  Sat, 08 Jun 2013 15:33:31 -0400
+ -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 16:09:33 -0500
 
 sratom (0.4.2) stable;
 
