--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+sratom (0.4.5) unstable;
+
+  * Update for latest LV2 Atom Object simplification
+  * Don't set eg prefix in sratom_to_turtle
+
+ -- David Robillard <d@drobilla.net>  Thu, 23 Jan 2014 21:58:48 -0500
+
 sratom (0.4.4) stable;
 
   * Escape invalid characters when writing paths as URIs
