--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,12 @@
 sratom (0.4.10) unstable;
 
+  * Fix padding of constructed vectors (thanks Hanspeter Portner)
   * Support round-trip serialisation of relative paths
   * Support sequences with beat time stamps
   * Fix warnings when building with ISO C++ compilers
   * Upgrade to waf 1.8.14
 
- -- David Robillard <d@drobilla.net>  Sun, 10 Jul 2016 18:57:29 -0400
+ -- David Robillard <d@drobilla.net>  Sun, 24 Jul 2016 09:50:32 -0400
 
 sratom (0.4.6) stable;
 
