--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-sratom (0.5.1) unstable;
+sratom (0.6.0) stable;
 
   * Add sratom_set_env() for setting prefixes
   * Fix padding of constructed vectors (thanks Hanspeter Portner)
@@ -7,7 +7,7 @@ sratom (0.5.1) unstable;
   * Fix warnings when building with ISO C++ compilers
   * Upgrade to waf 1.8.14
 
- -- David Robillard <d@drobilla.net>  Sun, 31 Jul 2016 02:31:55 -0400
+ -- David Robillard <d@drobilla.net>  Mon, 19 Sep 2016 22:25:35 -0400
 
 sratom (0.4.6) stable;
 
