--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+sratom (0.6.5) unstable;
+
+  * Fix various minor warnings and other code quality issues
+
+ -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 14:55:33 +0000
+
 sratom (0.6.4) stable;
 
   * Make sratom_free() safe to call on NULL
