--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+sratom (0.6.9) unstable;
+
+  * Fix potential blank node ID truncation
+
+ -- David Robillard <d@drobilla.net>  Sun, 10 Jan 2021 22:10:23 +0000
+
 sratom (0.6.8) stable;
 
   * Fix potential null pointer dereference
