--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
-sratom (0.6.9) unstable;
+sratom (0.6.10) stable;
 
+  * Fix documentation installation directory
   * Fix potential blank node ID truncation
 
- -- David Robillard <d@drobilla.net>  Sun, 10 Jan 2021 22:10:23 +0000
+ -- David Robillard <d@drobilla.net>  Thu, 26 May 2022 23:27:00 +0000
 
 sratom (0.6.8) stable;
 
