--- a/NEWS
+++ b/NEWS
@@ -1,42 +1,42 @@
-sratom (0.6.12) stable;
+sratom (0.6.12) stable; urgency=medium
 
   * Switch to meson build system
 
  -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:13:03 +0000
 
-sratom (0.6.10) stable;
+sratom (0.6.10) stable; urgency=medium
 
   * Fix documentation installation directory
   * Fix potential blank node ID truncation
 
  -- David Robillard <d@drobilla.net>  Thu, 26 May 2022 23:27:00 +0000
 
-sratom (0.6.8) stable;
+sratom (0.6.8) stable; urgency=medium
 
   * Fix potential null pointer dereference
 
  -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:36:14 +0000
 
-sratom (0.6.6) stable;
+sratom (0.6.6) stable; urgency=medium
 
   * Fix various minor warnings and other code quality issues
 
  -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 15:18:12 +0000
 
-sratom (0.6.4) stable;
+sratom (0.6.4) stable; urgency=medium
 
   * Make sratom_free() safe to call on NULL
   * Various minor code cleanups
 
  -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:20:40 +0000
 
-sratom (0.6.2) stable;
+sratom (0.6.2) stable; urgency=medium
 
   * Various minor code cleanups
 
  -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 18:48:51 +0000
 
-sratom (0.6.0) stable;
+sratom (0.6.0) stable; urgency=medium
 
   * Add sratom_set_env() for setting prefixes
   * Fix padding of constructed vectors (thanks Hanspeter Portner)
@@ -47,7 +47,7 @@ sratom (0.6.0) stable;
 
  -- David Robillard <d@drobilla.net>  Tue, 20 Sep 2016 02:25:35 +0000
 
-sratom (0.4.6) stable;
+sratom (0.4.6) stable; urgency=medium
 
   * Don't set eg prefix in sratom_to_turtle
   * Update for latest LV2 Atom Object simplification
@@ -55,14 +55,14 @@ sratom (0.4.6) stable;
 
  -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 22:14:19 +0000
 
-sratom (0.4.4) stable;
+sratom (0.4.4) stable; urgency=medium
 
   * Escape invalid characters when writing paths as URIs
   * Fancier printing without subject and predicate
 
  -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 21:09:33 +0000
 
-sratom (0.4.2) stable;
+sratom (0.4.2) stable; urgency=medium
 
   * Disable timestamps in HTML documentation for reproducible build
   * Fix memory leaks
@@ -72,7 +72,7 @@ sratom (0.4.2) stable;
 
  -- David Robillard <d@drobilla.net>  Mon, 18 Feb 2013 16:17:01 +0000
 
-sratom (0.4.0) stable;
+sratom (0.4.0) stable; urgency=medium
 
   * Correctly read objects with several rdf:type properties
   * Fix various hyper-strict warnings
@@ -82,7 +82,7 @@ sratom (0.4.0) stable;
 
  -- David Robillard <d@drobilla.net>  Thu, 23 Aug 2012 05:11:07 +0000
 
-sratom (0.2.0) stable;
+sratom (0.2.0) stable; urgency=medium
 
   * Initial release
 
