--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+sratom (0.6.15) unstable; urgency=medium
+
+  * Fix dependencies in pkg-config file
+
+ -- David Robillard <d@drobilla.net>  Wed, 05 Oct 2022 19:44:43 +0000
+
 sratom (0.6.14) stable; urgency=medium
 
   * Add project metadata
