--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,9 @@ sratom (0.6.15) unstable; urgency=medium
 
   * Fix dependencies in pkg-config file
   * Override pkg-config dependency within meson
+  * Replace duplicated dox_to_sphinx script with sphinxygen dependency
 
- -- David Robillard <d@drobilla.net>  Fri, 07 Oct 2022 17:28:31 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 04 Dec 2022 23:04:12 +0000
 
 sratom (0.6.14) stable; urgency=medium
 
