--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-sratom (0.6.15) unstable; urgency=medium
+sratom (0.6.16) stable; urgency=medium
 
   * Clean up code
   * Constrain relative URI references to the base URI
@@ -7,7 +7,7 @@ sratom (0.6.15) unstable; urgency=medium
   * Remove junk files from documentation install
   * Replace duplicated dox_to_sphinx script with sphinxygen dependency
 
- -- David Robillard <d@drobilla.net>  Sat, 02 Sep 2023 21:42:38 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 22 Oct 2023 20:06:26 +0000
 
 sratom (0.6.14) stable; urgency=medium
 
