Fix library current_version on MacOS

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
 sratom (0.6.17) unstable; urgency=medium
 
   * Enable clang nullability checks
+  * Fix library current_version on MacOS
 
- -- David Robillard <d@drobilla.net>  Tue, 09 Jan 2024 22:42:39 +0000
+ -- David Robillard <d@drobilla.net>  Thu, 14 Mar 2024 17:00:24 +0000
 
 sratom (0.6.16) stable; urgency=medium
 
