--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,10 @@
 sratom (0.6.19) unstable; urgency=medium
 
   * Avoid use of scanf when reading MIDI events
+  * Fix lint checks
   * Improve code quality
 
- -- David Robillard <d@drobilla.net>  Sun, 19 Jan 2025 14:34:33 +0000
+ -- David Robillard <d@drobilla.net>  Mon, 10 Feb 2025 17:55:54 +0000
 
 sratom (0.6.18) stable; urgency=medium
 
