Fix potential memory error when writing ambiguous relative paths

--- a/NEWS
+++ b/NEWS
@@ -3,9 +3,10 @@ sratom (0.6.19) unstable; urgency=medium
   * Avoid over-use of yielding meson options
   * Avoid use of scanf when reading MIDI events
   * Fix lint checks
+  * Fix potential memory error when writing ambiguous relative paths
   * Improve code quality
 
- -- David Robillard <d@drobilla.net>  Wed, 30 Jul 2025 18:30:51 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 28 Sep 2025 21:15:31 +0000
 
 sratom (0.6.18) stable; urgency=medium
 
