--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+sratom (0.6.21) unstable; urgency=medium
+
+  * Address new warnings in clang and clang-tidy 21
+
+ -- David Robillard <d@drobilla.net>  Sat, 20 Dec 2025 22:24:10 +0000
+
 sratom (0.6.20) stable; urgency=medium
 
   * Avoid over-use of yielding meson options
