Improve error handling

--- a/NEWS
+++ b/NEWS
@@ -4,8 +4,9 @@ sratom (0.6.21) unstable; urgency=medium
   * Address new warnings in clang and clang-tidy 21
   * Gracefully handle reading vectors with missing childType properties
   * Gracefully handle writing vectors with zero childSize properties
+  * Improve error handling
 
- -- David Robillard <d@drobilla.net>  Fri, 06 Feb 2026 20:07:46 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 07 Feb 2026 04:37:05 +0000
 
 sratom (0.6.20) stable; urgency=medium
 
