--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-sratom (0.6.21) unstable; urgency=medium
+sratom (0.6.22) stable; urgency=medium
 
   * Add clang nullability annotations
   * Address new warnings in clang and clang-tidy 21
@@ -7,7 +7,7 @@ sratom (0.6.21) unstable; urgency=medium
   * Gracefully handle writing vectors with zero childSize properties
   * Improve error handling
 
- -- David Robillard <d@drobilla.net>  Sat, 07 Feb 2026 22:52:05 +0000
+ -- David Robillard <d@drobilla.net>  Tue, 10 Feb 2026 18:45:17 +0000
 
 sratom (0.6.20) stable; urgency=medium
 
